# mcc-gaql-rs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPER.md  METADATA_MAINTENANCE.md  README.md  build.rs  check_and_notify.sh  clientsecret.json.example  notify.py  run_tests.sh  send_notification.sh  test_runner.py  test_runner_dryrun.py  test_runner_simple.py
.cargo/: config.toml
.github/workflows/: code-review.yml  release.yml  rust.yml
.opencode/plans/: inspect_prompts_plan.md
crates/mcc-gaql/: Cargo.toml  build.rs
crates/mcc-gaql-common/: Cargo.toml
crates/mcc-gaql-common/src/: config.rs  field_metadata.rs  http_client.rs  lib.rs  paths.rs
crates/mcc-gaql-gen/: Cargo.toml  build.rs
crates/mcc-gaql-gen/src/: bundle.rs  enricher.rs  formatter.rs  lib.rs  main.rs  model_pool.rs  proto_docs_cache.rs  proto_locator.rs  proto_parser.rs  r2.rs  rag.rs  scraper.rs  vector_store.rs
crates/mcc-gaql-gen/tests/: field_vector_store_rag_tests.rs  metadata_scraper_live_tests.rs  metadata_scraper_tests.rs  minimal_rag_test.rs  prompt_only_tests.rs
crates/mcc-gaql/src/: args.rs  config.rs  field_metadata.rs  googleads.rs  lib.rs  main.rs  setup.rs  util.rs
crates/mcc-gaql/tests/: config_tests.rs
docs/: DEV_TOKEN_CHANGES.md  DEV_TOKEN_CONFIGURATION.md  EMBEDDING_CREDENTIALS.md  IMPLEMENTATION_SUMMARY.md  RAG_OVERVIEW.md
logs/: .notification_pending.sent.1775271192  .notification_pending.sent.1775286602  .notification_pending.sent.1775304903  .notification_pending.sent.1775323203  .notification_pending.sent.1775354702  .notification_pending.sent.1775373003  .notification_pending.sent.1775391303  .notification_pending.sent.1775409603  .notification_pending.sent.1775422802  .notification_pending.sent.1775441102  .notification_pending.sent.1775459402  .notification_pending.sent.1775477702  .notification_pending.sent.1775496003  .notification_pending.sent.1775509202  .notification_pending.sent.1775527503  .notification_pending.sent.1775545802  .notification_pending.sent.1775564102  .notification_pending.sent.manual_1775224046  .notification_pending.sent.manual_1775268562  crontab.backup.20260403_174212
reports/: alternative_scraping_impl_review_and_fix.md  analyze_results.py  auto_profile_selection_impl_notes.md  centralized_rag_distribution_impl_notes.md  fix_nested_proto_fields_in_enrichment.md  improve_rag_impl_step_1_notes.md  improve_rag_impl_step_2_to_4_notes.md  inspect_prompt_code_review_kimi_opencode.md  inspect_prompt_code_review_opus.md  inspect_prompts_code_review.md  inspect_prompts_implementation_summary.md  prompt_inspection_implementation_report.md  query_cookbook_fair_retest_comparison.md  query_cookbook_gen_agent_execution_guide.md  query_cookbook_gen_comparison.20260326055456.md  query_cookbook_gen_comparison.20260326071507.md  query_cookbook_gen_comparison.20260326110518.md  query_cookbook_gen_comparison.20260327124819.md  query_cookbook_gen_comparison.md  query_cookbook_gen_comparison.md.bak.20260325101024  query_cookbook_gen_comparison_1.md  rag-for-resource-selection-implementation.md  rag_enhancement_implementation_handover.md  run_tests.sh  run_tests_fixed.sh  run_tests_simple.sh  validate_generated_gaql_impl_notes.md
reports/gen_results.1/: save_results.sh
resources/: domain_knowledge.md  query_cookbook.toml
scripts/: run_cookbook_gen_test.py
specs/: add_startup_banner_to_logs.md  alternative_scraping_implementation.md  alternative_scraping_plan.md  centralized_rag_distribution.md  configurable-llm-provider.md  configuration_system.md  distribute_releases_via_github.md  embed-domain-knowledge.md  embedding-cache-design.md  embedding-model-switching.md  enriched_fields_cache.md  explain_selection_process.md  extract-domain-knowledge.md  fastembed-cache-directory.md  fix-geo-target-constant-selectable-with_opus.md  fix_asset_field_type_view_selection.md  fix_candidate_gate_field_dropping.md  fix_conversion_action_field_retrieval.md  fix_cpa_threshold_parsing.md  fix_date_range_selection.md  fix_dropped_related_resource_promotion.md  fix_engagement_metrics_misinterpretation.md  fix_fair_results_missing_fields.md  fix_gaql_gen_report_20260327.md  fix_identifying_field_selection.md  fix_location_view_resource_selection.md  fix_metric_field_selection.md  fix_metric_field_selection_v2.md  fix_nested_protos_naming.md  fix_poor_resource_selection.md  fix_repeated_and_multiline_proto_fields.md  fix_tls_errors_in_sandbox.md  fix_tls_errors_in_sandbox_rig_core.md  gaql-metadata-for-llm-design.md  gaql_gen_prompt_improvements_part_3_impl.md  gaql_gen_prompt_improvements_run_2.md  gaql_gen_prompt_improvements_run_3.md  google_ads_metadata_enrichment_pipeline_plan.md  identity_fields_for_gaql_generation.md  improve_llm_concurrency.md  (+34 more)
src/: args.rs  config.rs  field_metadata.rs  googleads.rs  init.rs  lancedb_utils.rs  lib.rs  main.rs  metadata_enricher.rs  metadata_scraper.rs  model_pool.rs  prompt2gaql.rs  setup.rs  util.rs
tasks/: TASK_full_cookbook_test.md  TASK_query_cookbook_gen_test_execution_guide.md
tests/: config_tests.rs  field_vector_store_rag_tests.rs  metadata_scraper_live_tests.rs  metadata_scraper_tests.rs  minimal_rag_test.rs
tmp/: handover_workspace_split.md
