[package]
name = "mcc-gaql"
description = "Execute GAQL across MCC child accounts."
version = "0.14.0"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.11"
bincode = "1.3"
cacache = "10.0"
chrono = "0.4.42"
clap = { version = "3.1", features = ["derive", "cargo"] }
dialoguer = "0.11"
dirs = "4.0"
figment = { version = "0.10", features = ["toml", "env"] }
flexi_logger = { version = "0.22", features = ["compress"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
# googleads-rs = { version = "0.12.1", path = "../googleads-rs" }
googleads-rs = { version = "0.13.0", git = "https://github.com/mhuang74/googleads-rs.git", branch = "main" }
# googleads-rs = { version = "0.12" }
itertools = "0.10"
log = "0.4"
polars = { version = "0.42", features = ["lazy", "serde-lazy"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
thousands = "0.2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.5"
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
serde_json = "1.0"
yup-oauth2 = "6.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
rig-core = { version = "0.32.0", optional = true }
rig-fastembed = { version = "0.3", optional = true }
rig-lancedb = { version = "0.4", optional = true }
lancedb = { version = "0.23", optional = true }
arrow-array = { version = "56.2.0", optional = true }
arrow-schema = { version = "56.2.0", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["llm"]
# LLM/RAG features using lancedb for vector storage
llm = ["dep:rig-core", "dep:rig-fastembed", "dep:rig-lancedb", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
# When enabled, always load OAuth2 credentials from config directory at runtime
# instead of using embedded credentials. Useful for builds that should not
# bundle credentials for security or distribution reasons.
external_client_secret = []

[profile.dev]
# 1. Reduces the number of parallel "units" the compiler creates. 
# Lower number = Lower memory usage during linking.
codegen-units = 1 

# 2. Optimization level 1 makes the code clean enough that the 
# linker doesn't have to work as hard to merge symbols.
opt-level = 1

[profile.dev.package."*"]
# 3. Keep dependencies fast so your LLM/GAQL logic doesn't 
# drag down the test execution.
opt-level = 3
