[workspace]
members = [
    "crates/mcc-gaql",
    "crates/mcc-gaql-gen",
    "crates/mcc-gaql-common",
]
resolver = "2"

[workspace.package]
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2024"
version = "0.16.3"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
log = "0.4"
chrono = "0.4.42"
dirs = "4.0"
toml = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
rig-core = "0.33.0"
rig-fastembed = "0.3"
rig-lancedb = "0.4"
lancedb = { version = "0.23", default-features = false }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
mcc-gaql-common = { path = "crates/mcc-gaql-common" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.ci]
inherits = "dev"
codegen-units = 1
