[package]
name = "mcc-gaql-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Generate GAQL queries using LLM and RAG from Google Ads field metadata."

[dependencies]
mcc-gaql-common = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
rig-core = { workspace = true }
rig-fastembed = { workspace = true }
rig-lancedb = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
clap = { version = "4.0", features = ["derive", "cargo"] }
flexi_logger = { version = "0.22", features = ["compress"] }
regex = "1.10"
walkdir = "2"
num_cpus = "1.16"
twox-hash = "1.6"
rand = "0.8"

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
