[package]
name = "mcc-gaql"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Execute GAQL across MCC child accounts."

[dependencies]
mcc-gaql-common = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
bincode = "1.3"
cacache = "10.0"
clap = { version = "3.1", features = ["derive", "cargo"] }
dialoguer = "0.11"
figment = { version = "0.10", features = ["toml", "env"] }
flexi_logger = { version = "0.22", features = ["compress"] }
googleads-rs = { version = "23.2.0", path = "../../../googleads_rs_support_all_field_opus" }
itertools = "0.10"
polars = { version = "0.42", default-features = false, features = ["lazy", "fmt", "csv"] }
thousands = "0.2"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
yup-oauth2 = "6.7"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
# When enabled, always load OAuth2 credentials from config directory at runtime
# instead of using embedded credentials.
external_client_secret = []

[build-dependencies]
chrono = { workspace = true }
